# WSU-Coding-Projects

./: LICENSE  README.md
C Programming/CPTS 121/Labs/: Introduction.c  More Problem Solving with C.c
C Programming/CPTS 121/Programming Assignments/: EquationEvaluator.c
C++ Programming/CPTS 223/AVL Trees/: AVLNode.h
C++ Programming/CPTS 223/HashTables/: Hash.h
C++ Programming/CPTS 223/Matching Game/: commands.csv  definitions.cpp  main.cpp  profiles.csv  storage.csv
C++ Programming/CPTS 223/Matching Game/CLion/: CMakeLists.txt  header.h  main  profiles.csv
CPTS 355/Haskell/Assignment 0/: HUnitSampleTests.hs  SampleFunctions.hs
CPTS 355/Haskell/Assignment 1/: HW1.hs  HW1Tests.hs  P1a_HW1Tests.hs  P1b_HW1Tests.hs  P1c_HW1Tests.hs  P2_HW1Tests.hs  P3a_HW1Tests.hs  P3b_HW1Tests.hs  P4_HW1Tests.hs  P5_HW1Tests.hs  P6_HW1Tests.hs
CPTS 355/Haskell/Assignment 2/: HW2.hs  P1a_HW2tests.hs  P1b_HW2tests.hs  P2a_HW2tests.hs  P2b_HW2tests.hs  P3_HW2tests.hs  P4a_HW2tests.hs  P4b_HW2tests.hs  P5a_HW2tests.hs  P5b_HW2tests.hs  P6_HW2tests.hs
CPTS 355/Haskell/Lab 1/: Lab1.hs  Q1_tests.hs  Q2_tests.hs  Q3_tests.hs  Q4_tests.hs  Q5_tests.hs  Q6_tests.hs
CPTS 355/Haskell/Lab 2/: Lab2.hs  Q3_tests.hs  Q4_tests.hs
CPTS 355/Python/Assignment 3/: HW3.py  HW3Tests.py  P1_HW3tests.py  P2_HW3tests.py  P3_HW3tests.py  P4_HW3tests.py  P5_HW3tests.py
CPTS 355/Python/Assignment 4/: colors.py  psexpressions.py  psoperators.py  tests_part1.py
CPTS 355/Python/Assignment 5/: load.py  psexpressions.py  psoperators.py  psparser.py  repl.py  utils.py
CPTS 355/Python/Lab 3/: Lab3.py  (+6 more)
(+202 files in other folders)
